Fixed: the launch scripts